@@ -179,6 +179,7 @@ rb-robot-limit=Robot limit
 rb-rocket-launch-product-of=Rocket launch product of
 rb-rocket-launch-products=Rocket launch products
 rb-rocket-parts-required=Rocket parts required
+rb-science-pack=Science pack
 rb-search-filter=Search filters
 rb-search-gui-location-center=Center
 rb-search-gui-location-description=All GUIs in Recipe Book are draggable - this is just the default location. You can reset the location to default by middle-clicking the titlebar.
