@@ -39,6 +39,7 @@ function fluid_proc.build(database, _, metadata)
       prototype_name = name,
       pumped_by = {},
       recipe_categories = util.unique_obj_array(),
+      science_packs = util.unique_obj_array(),
       subgroup = { class = "group", name = prototype.subgroup.name },
       temperatures = {},
       unlocked_by = util.unique_obj_array(),
@@ -68,6 +69,7 @@ function fluid_proc.add_temperature(fluid_data, temperature_ident)
       product_of = {},
       prototype_name = fluid_data.prototype_name,
       recipe_categories = util.unique_obj_array(),
+      science_packs = util.unique_obj_array(),
       subgroup = fluid_data.subgroup,
       temperature_ident = temperature_ident,
       unlocked_by = util.unique_obj_array(),
