@@ -23,6 +23,7 @@ return function(database, dictionaries)
       minimum_temperature = fluid_box.minimum_temperature,
       placed_by = util.process_placed_by(prototype),
       prototype_name = name,
+      science_packs = util.unique_obj_array(),
       unlocked_by = {},
     }
 
