@@ -2,8 +2,10 @@
 Version: 3.4.0
 Date: ????
   Features:
-    - New interactions:
-      - [Entity] Shift + click to get a blueprint (not just on the recipe screen)
+    - Added new categories
+      - Science pack: Uncheck a science pack to hide all objects that it unlocks (#89)
+    - Added new interactions:
+      - [Entity] Shift + click to get a blueprint (not just on the recipe screen) (#98)
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.4
 Date: 2022-04-20
